FenicsPDE/MOND/jupyternbs/dolfin_reports/jitfailure-dolfin_expression_12af88234f70e65214924e4ffc9cf0cb/error.log
/tmp/tmpqmdqc7k5/dolfin_expression_12af88234f70e65214924e4ffc9cf0cb.cpp: In member function ‘virtual void dolfin::dolfin_expression_12af88234f70e65214924e4ffc9cf0cb::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpqmdqc7k5/dolfin_expression_12af88234f70e65214924e4ffc9cf0cb.cpp:78:124: error: ‘source_mass’ was not declared in this scope
           values[0] = (pow(x[0]-position_x,2+pow(x[1]-position_y,2)+pow(x[2]-position_z,2))<=pow(radius_tot, 2) ?a0*4*pi*G*source_mass/volume_out : 0;
                                                                                                                            ^~~~~~~~~~~
/tmp/tmpqmdqc7k5/dolfin_expression_12af88234f70e65214924e4ffc9cf0cb.cpp:78:150: error: expected ‘)’ before ‘;’ token
           values[0] = (pow(x[0]-position_x,2+pow(x[1]-position_y,2)+pow(x[2]-position_z,2))<=pow(radius_tot, 2) ?a0*4*pi*G*source_mass/volume_out : 0;
                                                                                                                                                      ^
/tmp/tmpqmdqc7k5/dolfin_expression_12af88234f70e65214924e4ffc9cf0cb.cpp: In member function ‘virtual double dolfin::dolfin_expression_12af88234f70e65214924e4ffc9cf0cb::get_property(std::__cxx11::string) const’:
/tmp/tmpqmdqc7k5/dolfin_expression_12af88234f70e65214924e4ffc9cf0cb.cpp:90:11: warning: this ‘if’ clause does not guard... [-Wmisleading-indentation]
           if (name == "a0") return a0;          if (name == "ms") return ms;          if (name == "mgb") return mgb;          if (name == "G") return G;          if (name == "ly") return ly;          if (name == "kp") return kp;          if (name == "radius_tot") return radius_tot;          if (name == "volume_out") return volume_out;          if (name == "x_close") return x_close;          if (name == "y_close") return y_close;          if (name == "z_close") return z_close;          if (name == "radius_close") return radius_close;          if (name == "stand_dev") return stand_dev;          if (name == "p") return p;          if (name == "position_x") return position_x;          if (name == "position_y") return position_y;          if (name == "position_z") return position_z;
           ^~
/tmp/tmpqmdqc7k5/dolfin_expression_12af88234f70e65214924e4ffc9cf0cb.cpp:90:49: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
           if (name == "a0") return a0;          if (name == "ms") return ms;          if (name == "mgb") return mgb;          if (name == "G") return G;          if (name == "ly") return ly;          if (name == "kp") return kp;          if (name == "radius_tot") return radius_tot;          if (name == "volume_out") return volume_out;          if (name == "x_close") return x_close;          if (name == "y_close") return y_close;          if (name == "z_close") return z_close;          if (name == "radius_close") return radius_close;          if (name == "stand_dev") return stand_dev;          if (name == "p") return p;          if (name == "position_x") return position_x;          if (name == "position_y") return position_y;          if (name == "position_z") return position_z;
                                                 ^~
